--- a/hardware/pcb/readme
+++ b/hardware/pcb/readme
@@ -1,1 +1,4 @@
-Here is PCB Folder.
+# PCB Designs
+
+This folder contains all the PCB design files used throughout our project. 
+It includes schematics, layout files, and fabrication outputs for each board revision.
